<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Utility" Id="{597df956-8ffc-41e8-b0ab-1e7138ae5045}">
    <Declaration><![CDATA[TYPE ST_Utility :
STRUCT
MainAirOn	     :BOOL;        //MAIN AIR PRESSURE OK
MainAirPSI AT%I* :REAL;        //MAIN AIR DATA FROM BALLUFF PRESSURE SENSOR
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>